packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_empty_sup_bracket_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      9
    ],
    "items": 9,
    "width": 32.98,
    "height": 17.93,
    "x": -16.92,
    "y": 0.0
  }
]
