packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_empty_sup_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      20
    ],
    "items": 6,
    "width": 17.03,
    "height": 18.0,
    "x": -8.51,
    "y": 62.72
  },
  {
    "range": [
      22,
      28
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 122.32
  }
]
