packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_empty_sup_eof_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      4
    ],
    "items": 6,
    "width": 8.43,
    "height": 16.0,
    "x": 0.0,
    "y": 0.0
  }
]
