packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_after_heading_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      9
    ],
    "items": 6,
    "width": 133.31,
    "height": 42.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      11,
      17
    ],
    "items": 2,
    "width": 36.88,
    "height": 21.12,
    "x": 0.0,
    "y": 61.44
  },
  {
    "range": [
      19,
      46
    ],
    "items": 5,
    "width": 94.64,
    "height": 90.48,
    "x": 0.0,
    "y": 101.76
  }
]
