packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_array_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 15,
      "end": 16
    },
    "severity": "warning",
    "message": "unclosed grouping; inserted a closing `)`",
    "hints": []
  }
]
