packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_astral_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 5,
    "width": 65.84,
    "height": 44.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      12,
      25
    ],
    "items": 10,
    "width": 30.21,
    "height": 88.38,
    "x": 0.0,
    "y": 85.84
  },
  {
    "range": [
      27,
      43
    ],
    "items": 5,
    "width": 46.72,
    "height": 90.48,
    "x": 0.0,
    "y": 215.82
  }
]
